--- a/01_WEB/Entregas/in-progress/actividad-8_higa-Ivan/index.html
+++ b/01_WEB/Entregas/in-progress/actividad-8_higa-Ivan/index.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TESTSPACE</title>
+        <title>Actividad 8</title>
         <link rel="stylesheet" href="styles.css" />
-        <script src="index.js"></script>
+        <script src="main.js"></script>
     </head>
     <body>
-        <p>
-            TEST
-        </p>
+        <button onclick="ejercicio1()">Ejercicio 1</button>
     </body>
 </html>
